--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/fortify": "^1.5",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "livewire/livewire": "^2.2"
+        "livewire/livewire": "^2.2",
+        "midtrans/midtrans-php": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
